# Tyler-Lernen-

./: CMakeLists.txt  Merkzettel  README.md  grundlagen.cpp  hello.cpp  import spotipy 2.py  test.cpp
Projekte/: import spotipy 2.py
